correction visibilité de la navbar

--- a/TontapattWeb/src/main/webapp/resources/assets/css/style.css
+++ b/TontapattWeb/src/main/webapp/resources/assets/css/style.css
@@ -1534,3 +1534,13 @@ position: relative;
 	width: 100%;
 	font-size: 14px;
 }
+
+header.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
+  
+}
+
+header.scrolled nav a {
+	color: black !important;
+}
